Collect data in a different way so that we don't need Power Panel business edition which doesn't work for some consumer models

--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,10 @@
 [GENERAL]
-Delay = 2
+Delay = 10
 Output = True
 
 [INFLUXDB]
-Address =
+Address = localhost
 Port = 8086
 Database = ups_data
 Username =
 Password =
-
-[UPS]
-Address =
-Port = 3052
